# ai-playground

./: .gitignore  README.md
Generative-AI-Masters--NLP-Transformers -Gen-AI/Deployment/: app.py
NLP/: 3_text_preprocessing_code.ipynb  nlp_basics_notebook.ipynb  test.ipynb
NLP/Course Materials/Slide and Demo Notebooks/: section3_text_preprocessing_code.ipynb
ai-ts-playground/: index.js  package-lock.json  package.json
n8n/: .env.example  credentials.txt  docker-compose.yml
python-refresher/: pyproject.toml
python-refresher/02_datatypes/: chapter_1.py  chapter_10.py  chapter_4.py  chapter_6.py  chapter_7.py
python-refresher/03_conditions/: snack_system.py
python-refresher/04_loop/: 09_warlrus.py  10_dict_case.py
python-refresher/05_functions/: 01_duplication.py
python/python-ai-agents-transition/: .gitignore  Dockerfile  Makefile  PYTHON_3.12_UPDATE.md  QUICKSTART.md  README.md  SEPARATE_VENVS.md  VENV_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
python/python-ai-agents-transition/Week-1/: async_await_asyncio.py  cli_app_aiohttp.py  file_io_venv.py  python_syntax.py  requirements.txt  sample.txt  sample_data.json  simple_cli_tool_aiohttp.py
python/python-ai-agents-transition/docs/: api.md
python/python-ai-agents-transition/scripts/: manage_weeks.py
python/python-ai-agents-transition/week-2/: __init__.py  db.py  deps.py  env.example  main.py  pytest.ini  requirements.txt  schemas.py  test_db.py  test_main.py
python/python-ai-agents-transition/week-3/: llm_utils.py  main.py  requirements.txt  test_main.py
python/python-ai-agents-transition/week-4/: env.example  main.py  test_main.py
python/python-ai-agents-transition/week-5/: env.example  main.py  requirements.txt  test_main.py
python/python-ai-agents-transition/week-6/: env.example  main.py  requirements.txt  test_main.py
python/python-refresher/: comprehensions.py  decorators.py  generator.py  main.py  oop.py
python/python-refresher/02_datatypes/: chapter_2.py  chapter_3.py  chapter_5.py  chapter_8.py  chapter_9.py
python/python-refresher/03_conditions/: price_calculation.py
python/python-refresher/04_loop/: 01_token_dispenser.py
python/python-refresher/05_functions/: input_params.py  types_functions.py
typescript/chat-bot/: package.json
typescript/playground/: index.js  package-lock.json  package.json
